--- a/Cadres/app/build.gradle
+++ b/Cadres/app/build.gradle
@@ -1,32 +1,81 @@
 apply plugin: 'com.android.application'
+apply plugin: 'org.greenrobot.greendao'
 
 android {
+
+    signingConfigs {
+        debugConfig {
+            storeFile file("bigcadres.jks")
+            storePassword "bigcadres123"
+            keyAlias "bigcadres"
+            keyPassword "bigcadres123"
+        }
+    }
+
     compileSdkVersion 29
 
     defaultConfig {
         applicationId "com.example.cadres"
         minSdkVersion 21
         targetSdkVersion 29
+//        versionCode 0000001
         versionCode 1
-        versionName "1.0"
+        versionName "0.0.0.1"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
     buildTypes {
-        release {
+        debug {
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.debugConfig
+        }
+        release {
+            // 混淆g
+            minifyEnabled true
+            // Zipalign优化
+            zipAlignEnabled true
+            // 移除无用的resource文件
+            shrinkResources true
+            // 前一部分代表系统默认的android程序的混淆文件，该文件已经包含了基本的混淆声明，后一个文件是自己的定义混淆文件
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.debugConfig
         }
     }
+
+}
+
+//schemaVersion：指定数据库schema版本号，迁移等操作会用到；
+//daoPackage：通过gradle插件生成的数据库相关文件的包名，默认为你的entity所在的包名；
+//targetGenDir：自定义生成数据库文件的目录，可以将生成的文件放到我们的java目录中，而不是build中，这样就不用额外的设置资源目录了。
+greendao {
+    // 指定数据库schema版本号，迁移等操作会用到
+    schemaVersion 1
+    // 设置生成数据库文件的目录，默认是在build中，可以将生成的文件放到我们的java目录中
+    targetGenDir 'src/main/java'
+    // 设置生成的数据库相关文件的包名，默认为entity所在的包名
+    daoPackage 'com.cadres.greendao.gen'
 }
 
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-
+    //图片
+    implementation 'com.github.bumptech.glide:glide:3.7.0'
+    //添加HttpLoggingInterceptor进行调试
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.8.1'
+    //rxjava2
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
+    implementation 'io.reactivex.rxjava2:rxjava:2.x.y'
+    //配合Rxjava 使用
+    implementation 'com.google.code.gson:gson:2.6.2'
+    //导入retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
+    //导入retrofit
+    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+    //转换器，请求结果转换成Model
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
+    //greendao
+    implementation 'org.greenrobot:greendao:3.3.0' // 添加依赖
 }
