--- a/Cadres/build.gradle
+++ b/Cadres/build.gradle
@@ -3,9 +3,13 @@ buildscript {
     repositories {
         google()
         jcenter()
+        // 添加仓库
+        mavenCentral()
     }
     dependencies {
         classpath "com.android.tools.build:gradle:4.0.0"
+        // 添加插件
+        classpath 'org.greenrobot:greendao-gradle-plugin:3.3.0'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -16,6 +20,8 @@ allprojects {
     repositories {
         google()
         jcenter()
+       // 添加仓库
+        mavenCentral()
     }
 }
 
