--- a/Cadres/app/build.gradle
+++ b/Cadres/app/build.gradle
@@ -59,6 +59,7 @@ greendao {
 
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
+    implementation files('libs/shiro-core-1.4.2.jar')
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     //图片
