--- a/Cadres/app/build.gradle
+++ b/Cadres/app/build.gradle
@@ -62,6 +62,8 @@ dependencies {
     implementation files('libs/shiro-core-1.4.2.jar')
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.recyclerview:recyclerview:1.0.0'
+    
     //图片
     implementation 'com.github.bumptech.glide:glide:3.7.0'
     //添加HttpLoggingInterceptor进行调试
@@ -79,4 +81,5 @@ dependencies {
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
     //greendao
     implementation 'org.greenrobot:greendao:3.3.0' // 添加依赖
+
 }
