--- a/Cadres/app/src/main/AndroidManifest.xml
+++ b/Cadres/app/src/main/AndroidManifest.xml
@@ -36,6 +36,12 @@
             android:launchMode="singleTask"
             android:windowSoftInputMode="adjustPan" />
 
+        <activity
+            android:name=".view.zcfg.ZcfgActivity"
+            android:windowSoftInputMode="adjustPan"/>
+        <activity
+            android:name=".view.zcfg.ZcfgDetailActivity"/>
+
     </application>
 
 </manifest>
