--- a/Cadres/app/src/main/AndroidManifest.xml
+++ b/Cadres/app/src/main/AndroidManifest.xml
@@ -41,6 +41,8 @@
             android:windowSoftInputMode="adjustPan"/>
         <activity
             android:name=".view.zcfg.ZcfgDetailActivity"/>
+        <activity
+            android:name=".view.Bm.BmActivity"/>
 
     </application>
 
