--- a/Cadres/app/src/main/AndroidManifest.xml
+++ b/Cadres/app/src/main/AndroidManifest.xml
@@ -43,6 +43,8 @@
             android:name=".view.zcfg.ZcfgDetailActivity"/>
         <activity
             android:name=".view.Bm.BmActivity"/>
+        <activity
+            android:name=".view.Gb.GbActivity"/>
 
     </application>
 
