--- a/Cadres/app/build.gradle
+++ b/Cadres/app/build.gradle
@@ -63,7 +63,8 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
-    
+    implementation "com.google.android.material:material:1.0.0"
+
     //图片
     implementation 'com.github.bumptech.glide:glide:3.7.0'
     //添加HttpLoggingInterceptor进行调试
