研究决策部分ui

--- a/Cadres/app/src/main/AndroidManifest.xml
+++ b/Cadres/app/src/main/AndroidManifest.xml
@@ -47,6 +47,8 @@
             android:name=".view.Gb.GbActivity"/>
         <activity
             android:name=".view.Gb.GbDetailActivity"/>
+        <activity
+            android:name=".view.yjjc.YjjcActivity"/>
 
     </application>
 
