--- a/Cadres/app/src/main/AndroidManifest.xml
+++ b/Cadres/app/src/main/AndroidManifest.xml
@@ -49,6 +49,8 @@
             android:name=".view.Gb.GbDetailActivity"/>
         <activity
             android:name=".view.yjjc.YjjcActivity"/>
+        <activity
+            android:name=".view.yjjc.YjjcDetailActivity"/>
 
     </application>
 
