--- a/Cadres/app/build.gradle
+++ b/Cadres/app/build.gradle
@@ -82,5 +82,6 @@ dependencies {
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
     //greendao
     implementation 'org.greenrobot:greendao:3.3.0' // 添加依赖
+    implementation 'com.github.Jay-Goo:RangeSeekBar:v1.1.0'
 
 }
