--- a/Cadres/build.gradle
+++ b/Cadres/build.gradle
@@ -5,6 +5,7 @@ buildscript {
         jcenter()
         // 添加仓库
         mavenCentral()
+        maven { url 'https://jitpack.io' }
     }
     dependencies {
         classpath "com.android.tools.build:gradle:4.0.0"
@@ -22,6 +23,7 @@ allprojects {
         jcenter()
        // 添加仓库
         mavenCentral()
+        maven { url 'https://jitpack.io' }
     }
 }
 
