--- a/Cadres/app/src/main/AndroidManifest.xml
+++ b/Cadres/app/src/main/AndroidManifest.xml
@@ -55,6 +55,8 @@
             android:name=".view.search.SearchActivity"/>
         <activity
             android:name=".view.search.SearchDetailActivity"/>
+        <activity
+            android:name=".view.dsjty.DsjtyActivity"/>
 
     </application>
 
