--- a/Cadres/app/src/main/AndroidManifest.xml
+++ b/Cadres/app/src/main/AndroidManifest.xml
@@ -52,6 +52,8 @@
         <activity
             android:name=".view.yjjc.YjjcDetailActivity"/>
         <activity
+            android:name=".view.yjjc.YjjcVoteActivity"/>
+        <activity
             android:name=".view.search.SearchActivity"/>
         <activity
             android:name=".view.search.SearchDetailActivity"/>
