附件查看 推演列表页，ids为空崩溃处理 图片下载优化：修改 - 全部删除再下载，下载失败不往下走，对话框没下载完提前关闭。

--- a/Cadres/app/build.gradle
+++ b/Cadres/app/build.gradle
@@ -86,4 +86,6 @@ dependencies {
 
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
 
+    implementation 'com.github.chrisbanes:PhotoView:2.3.0'
+
 }
