--- a/Cadres/app/build.gradle
+++ b/Cadres/app/build.gradle
@@ -87,5 +87,6 @@ dependencies {
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
 
     implementation 'com.github.chrisbanes:PhotoView:2.3.0'
+    implementation 'zlc.season:rxdownload:1.2.2'
 
 }
