有关干部名册增加领导干部名称、职级公务员名称、后备干部名册的切换。公务员进去后，头部的内容显示公务员职级表相关信息

--- a/Cadres/app/src/main/AndroidManifest.xml
+++ b/Cadres/app/src/main/AndroidManifest.xml
@@ -75,6 +75,8 @@
             android:name=".view.dsjty.TyListActivity"/>
         <activity
             android:name=".view.other.PhotoImageActivity"/>
+        <activity
+            android:name=".view.Gb.GbSelectActivity"/>
 
     </application>
 
