10、大数据推演中加入公务员切换，只显示职级推演和结构推演。

--- a/Cadres/app/src/main/AndroidManifest.xml
+++ b/Cadres/app/src/main/AndroidManifest.xml
@@ -77,6 +77,8 @@
             android:name=".view.other.PhotoImageActivity"/>
         <activity
             android:name=".view.Gb.GbSelectActivity"/>
+        <activity
+            android:name=".view.dsjty.DsjtySelectActivity"/>
 
     </application>
 
