部门-公务员-列表

--- a/Cadres/app/src/main/AndroidManifest.xml
+++ b/Cadres/app/src/main/AndroidManifest.xml
@@ -77,6 +77,8 @@
             android:name=".view.Gb.GbSelectActivity"/>
         <activity
             android:name=".view.dsjty.DsjtySelectActivity"/>
+        <activity
+            android:name=".view.Bm.BmGwyActivity"/>
 
     </application>
 
