--- a/Cadres/app/src/main/AndroidManifest.xml
+++ b/Cadres/app/src/main/AndroidManifest.xml
@@ -95,6 +95,9 @@
             android:name=".view.dsjty.DsjtySelectActivity"
             android:screenOrientation="landscape"/>
         <activity
+            android:name=".view.Bm.BmSelectActivity"
+            android:screenOrientation="landscape"/>
+        <activity
             android:name=".view.Bm.BmGwyActivity"
             android:screenOrientation="landscape"/>
 
