--- a/Cadres/app/src/main/AndroidManifest.xml
+++ b/Cadres/app/src/main/AndroidManifest.xml
@@ -65,6 +65,9 @@
             android:name=".view.Gb.GbActivity"
             android:screenOrientation="landscape"/>
         <activity
+            android:name=".view.Gb.GbActivity2"
+            android:screenOrientation="landscape"/>
+        <activity
             android:name=".view.yjjc.YjjcActivity"
             android:screenOrientation="landscape"/>
         <activity
