--- a/Cadres/app/src/main/AndroidManifest.xml
+++ b/Cadres/app/src/main/AndroidManifest.xml
@@ -83,10 +83,16 @@
             android:name=".view.search.SearchDetailActivity"
             android:screenOrientation="landscape"/>
         <activity
+            android:name=".view.search.SearchDetailActivity2"
+            android:screenOrientation="landscape"/>
+        <activity
             android:name=".view.dsjty.DsjtyActivity"
             android:screenOrientation="landscape"/>
         <activity
             android:name=".view.dsjty.TyListActivity"
+            android:screenOrientation="landscape"/>
+        <activity
+            android:name=".view.dsjty.TyListActivity2"
             android:screenOrientation="landscape"/>
         <activity
             android:name=".view.other.PhotoImageActivity"
